# vtk_examples

./: .gitignore  README.md
vtk_13_tong_xin_yuan/: CMakeLists.txt  Main.qml  widgetcontainer.cpp  widgetcontainer.h
vtk_13_tongxinyuan/: CMakeLists.txt  CircularTrajectoryWidget.cpp  CircularTrajectoryWidget.h  MainWindow.cpp  MainWindow.h  main.cpp  main_copy.cpp  main_copy222.cpp  main_copy333.cpp  main_report_genderator2.cpp  main_report_generator.cpp  resources.qrc
vtk_13_tongxinyuan/assets/qml/: Main.qml  Message.qml  OverlayPanel.qml
vtk_13_tongxinyuan/chart/: CondyleTrackWidget.h  TrackPlotter.cpp  TrackPlotter.h
vtk_13_tongxinyuan/socket/: TcpClient.cpp  TcpClient.h
vtk_13_tongxinyuan/vtk/: OcclusionWidget.cpp  OcclusionWidget.h
vtk_qt_01_intergration/: CMakeLists.txt  main.cpp
vtk_qt_02_render_cylinder/: CMakeLists.txt  main.cpp
vtk_qt_03_light/: CMakeLists.txt  main.cpp
vtk_qt_04_camera/: CMakeLists.txt  main.cpp
vtk_qt_05_texture/: CMakeLists.txt  main.cpp
vtk_qt_06_stl_view/: CMakeLists.txt  main.cpp  main_bite_animate.cpp  main_mark_icp.cpp  main_multi_stl.cpp  main_normal.cpp  main_soft.cpp
vtk_qt_09_widget_intergration/: CMakeLists.txt  VtkWidgetWindow.cpp  VtkWidgetWindow.h  main.cpp
vtk_qt_10_quick_widget_itergration/: CMakeLists.txt  main.cpp
vtk_qt_12_bite/: CMakeLists.txt  CustomInteractorStyle.h  MainWindow.cpp  MainWindow.h  Mesure3DWidget.cpp  Mesure3DWidget.h  VTKOcclusionSimulation.cpp  VTKOcclusionSimulation.h  VtkWidgetWindow.h  main.cpp  main_copy.cpp  resources.qrc
vtk_qt_14_qiemian/: CMakeLists.txt  main.cpp  main_cutte_split_and_2d_paint.cpp  main_cutter_basic_01.cpp  main_cutter_plane_move_able.cpp  main_cutter_plane_upper_and_lowe.cpp  main_distance_angle_testing.cpp  main_grid.cpp
vtk_qt_14_qiemian/src/vtk/widget/: PlaneSliceViewer.cpp
vtk_qt_15_qss/: CMakeLists.txt
vtk_qt_15_qss/assets/stl/: lower_jaw.stl
vtk_qt_16/: CMakeLists.txt  main.cpp
vtk_qt_17_pengzhuang/: CMakeLists.txt  main.cpp
vtk_qt_17_pengzhuang/src/vtk/style/: DisabledInteractorStyle.h
vtk_qt_17_pengzhuang/src/vtk/widget/: PlaneSliceViewer.h
vtk_qt_widget_render_qml/: CMakeLists.txt  CustomWidget.cpp  CustomWidget.h  HybridWindow.cpp  HybridWindow.h  LoginWidget.cpp  LoginWidget.h  backend.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc
vtk_qt_widget_render_qml/assets/stl/: upper_jaw.stl
vtk_qt_widget_render_qml/qml/: Analysis.qml  Dashboard.qml  Login.qml  LoginPage.qml  NavigationMenu.qml  Settings.qml
vtk_qt_widget_render_qml/qml/Components/: ThemeManager.qml
vtk_qt_widget_render_qml/qml/_components/: Button.qml  ElementStyleTable.qml  ThemeManager.qml  ValidatedTextField.qml  WButton.qml  WDatePicker.qml  WImagePreview.qml  WImageSvg.qml  WMessageBox.qml  WNotification.qml  WPagination.qml  WTable.qml  WTable2.qml  WTextField.qml
vtk_qt_widget_render_qml/qml/_components/table/: TableCell.qml
vtk_qt_widget_render_qml/qml/_widgets/: PatientCurrent.qml  SideMenu.qml  UploadButton.qml
vtk_qt_widget_render_qml/qml/analysis/: AnalysisAnalyze.qml  AnalysisModel.qml  AnalysisTracks.qml
vtk_qt_widget_render_qml/qml/detection/: DetectionIndex.qml
vtk_qt_widget_render_qml/qml/mesure/: MesureControl.qml  MesureSteps.qml
vtk_qt_widget_render_qml/qml/patient/: PatientDetail.qml  PatientEditPopup.qml  PatientIndex.qml  PatientListItem.qml  PatientMesureRecords.qml
vtk_qt_widget_render_qml/src/common/: EncryptUtils.cpp  EncryptUtils.h  EventBus.cpp  EventBus.h  FileUtils.h  PatientFileTransferManager.cpp  PatientFileTransferManager.h  VtkStlPreviewGenerator.cpp  VtkStlPreviewGenerator.h
vtk_qt_widget_render_qml/src/config/: ConfigManager.cpp  ConfigManager.h
vtk_qt_widget_render_qml/src/database/: BaseDao.h  DBManager.cpp  DBManager.h  Database.cpp  Database.h  PaginationResult.cpp  PaginationResult.h  export.h
vtk_qt_widget_render_qml/src/mesure/: MesureRecord.cpp  MesureRecord.h  MesureRecordController.cpp  MesureRecordController.h  MesureRecordDao.cpp  MesureRecordDao.h  MesureRecordModel.cpp  MesureRecordModel.h  MesureRecordObject.cpp  MesureRecordObject.h  MesureRecordStatusEnum.h  MesureWidget.cpp  MesureWidget.h
vtk_qt_widget_render_qml/src/mesure_step/: MesureStep.cpp  MesureStep.h  MesureStepDao.cpp  MesureStepDao.h  MesureStepStatusEnum.h
vtk_qt_widget_render_qml/src/model/: VtkJawRendererWidget.cpp  VtkJawRendererWidget.h
vtk_qt_widget_render_qml/src/patient/: Patient.cpp  Patient.h  PatientController.cpp  PatientController.h  PatientDao.cpp  PatientDao.h  PatientModel.cpp  PatientModel.h  PatientObject.cpp  PatientObject.h
vtk_qt_widget_render_qml/src/user/: LoginController.cpp  LoginController.h  User.cpp  User.h  UserDao.cpp  UserDao.h
